--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>seach</title>
+  <title>seach shadow</title>
   <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
